--- a/static/desktop.css
+++ b/static/desktop.css
@@ -145,51 +145,51 @@ body{
     grid-row: 2;
     grid-template-columns: 2fr 1fr 2fr;
 }
-#backgroundpic{
-    grid-column: 1/3; 
-    grid-row: 1; 
-    z-index: 0; 
+#backgroundpic{ 
+    background-attachment: fixed; 
+    background-image: url('../static/images/field.PNG'); 
+    background-position: center center; 
+    background-repeat: no-repeat; 
+    background-size: cover; 
     display: grid;
+    grid-column: 1/3; 
+    grid-row: 1;
     grid-template-columns: 1fr 1fr; 
     grid-template-rows: 2fr; 
-    background-image: url('../static/images/field.PNG'); 
-    background-repeat: no-repeat; 
-    background-position: center center; 
-    background-attachment: fixed; 
-    background-size: cover;
+    z-index: 0;
 }
 #competitive{
     position: relative;
 }
-#competitive > h2{
+#competitive > h2{ 
+    font-size: 4.5vmin;
     padding-left: 10%;
     padding-top: 130px; 
-    font-size: 4.5vmin; 
-    text-shadow: 5px 5px 2px#3f3f3fa6; 
-    text-align: left;
+    text-align: left; 
+    text-shadow: 5px 5px 2px#3f3f3fa6;
 }
 #awards{
+    background-color: rgba(85, 85, 85, 0.322);
     grid-column: 2; 
     grid-row: 1;
-    background-color: rgba(85, 85, 85, 0.322);
 }
-#awards > h2{
+#awards > h2{ 
+    color:white; 
+    font-size: 3.7vmin;
     padding-right: 10%; 
     padding-top: 130px; 
-    font-size: 3.7vmin; 
-    text-shadow: 5px 5px 2px#3f3f3fa6; 
     text-align: right; 
-    color:white;
+    text-shadow: 5px 5px 2px#3f3f3fa6;
 }
-#hR1{
+#hR1{ 
+    display: grid;
     grid-column: 1/3; 
     grid-row: 2; 
-    grid-template-columns: 1fr 1fr; 
-    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
-#hR1C1{
+#hR1C1{ 
+    display: grid;
     grid-column: 1; 
-    display: grid; 
     grid-template-columns: 1fr 2fr 1fr; 
     grid-template-rows: 1fr 1fr 1fr; 
 }
@@ -197,23 +197,28 @@ body{
     grid-column: 2;
 }
 #hR2{
-    grid-column: 1/3; 
-    grid-row: 3;
-    display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
     background-attachment: fixed; 
     background-image: url('../static/images/arena3.png'); 
-    background-repeat: no-repeat; 
     background-position: center center; 
+    background-repeat: no-repeat; 
     background-size: cover;
+    display: grid;
+    grid-column: 1/3; 
+    grid-row: 3;
+    grid-template-rows: 1fr 1fr 1fr;
 }
 #hR2 > h1{
-    margin: 0 auto;
     color: rgb(255, 255, 255);
     font-size: 14vmin;
-    grid-row: 2;
     letter-spacing: 1.1vmin;
+    margin: 0 auto;
     text-shadow: -9px 4px 5px#3f3f3fa6; 
+}
+#hR2Desktop{
+    grid-row: 2;
+}
+#hR2Mobile{
+    display: none;
 }
 #hR3{
     grid-column: 1/3; 
@@ -274,14 +279,14 @@ body{
 }
 .container {
     background-color: #fff;
-    box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.06), 0 1px 0 0 rgba(0, 0, 0, 0.02);
+    box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.06), 0 1px 0 0 rgba(0, 0, 0, 0.02); 
+    grid-column: 1/4;
+    grid-row: 1/3;
     margin: 0 auto;
     max-height: 250px;
     max-width: 100%;
     overflow: hidden;
     padding: 0;
-    grid-row: 1/3; 
-    grid-column: 1/4;
 }
 .particle {
     height:auto !important;
@@ -289,142 +294,142 @@ body{
 }
 #about {
     display: inline; 
-    text-align: center; 
     font-size: 5vmin; 
-    margin: 0 auto;
+    margin: 0 auto; 
+    text-align: center;
 }
-#backgroundpic2 {
+#backgroundpic2 { 
+    background-attachment: scroll; 
+    background-image: url('../static/images/with 221w.jpg'); 
+    background-position: top center; 
+    background-repeat: no-repeat; 
+    background-size: cover; 
+    border-bottom: 2px solid rgb(35, 39, 42); 
+    border-top: 2px solid rgb(35, 39, 42); 
+    display: grid;
     grid-column: 1/3; 
     grid-row: 1; 
-    z-index: 0; 
-    display: grid; 
     grid-template-columns: 1fr 1fr; 
     grid-template-rows: 2fr; 
-    background-image: url('../static/images/with 221w.jpg'); 
-    background-repeat: no-repeat; 
-    background-position: top center; 
-    background-attachment: scroll; 
-    background-size: cover; 
-    border-top: 2px solid rgb(35, 39, 42); 
-    border-bottom: 2px solid rgb(35, 39, 42);
+    z-index: 0;
 }
-#team2405 {
-    position: relative;
+#team2405 { 
+    background-color: rgba(85, 85, 85, 0.322); 
+    color:white;
     grid-column: 1; 
-    grid-row: 1; 
-    color:white; 
-    background-color: rgba(85, 85, 85, 0.322);
+    grid-row: 1;
+    position: relative;
 }
-#team2405 > h2{
+#team2405 > h2{ 
+    font-size: 2vmin;
     padding-left: 25%; 
     padding-top: 450px; 
-    font-size: 2vmin; 
-    text-shadow: 5px 5px 2px#3f3f3fa6; 
-    text-align: left;
+    text-align: left; 
+    text-shadow: 5px 5px 2px#3f3f3fa6;
 }
 #team221 {
-    position: relative;
+    background-color: rgba(85, 85, 85, 0.322);
     grid-column: 2; 
     grid-row: 1;
-    background-color: rgba(85, 85, 85, 0.322);
+    position: relative;
 }
-#team221 > h2 {
+#team221 > h2 { 
+    color:white; 
+    font-size: 2vmin;
     padding-right: 25%; 
     padding-top: 450px; 
-    font-size: 2vmin; 
-    text-shadow: 5px 5px 2px#3f3f3fa6; 
     text-align: right; 
-    color:white;
+    text-shadow: 5px 5px 2px#3f3f3fa6;
 }
-#aR1 {
+#aR1 { 
+    display: grid;
     grid-column: 1/3; 
     grid-row: 2; 
     grid-template-columns: 1fr 3fr 1fr; 
-    display: grid; 
     grid-template-rows: 1fr 1fr;
 }
-#aR1C1 {
+#aR1C1 { 
+    display: grid;
     grid-column: 2/3; 
     grid-row: 1/3; 
-    display: grid; 
     grid-template-columns: 3fr 1fr 2fr;
 }
-#aR1C1 > p {
+#aR1C1 > p { 
+    color: rgb(35, 39, 42); 
+    font-size: 2.46vh;
     grid-column:1; 
     padding-top: 8vh; 
     text-align: left; 
-    color: rgb(35, 39, 42); 
-    font-size: 2.46vh; 
     text-indent: 2em;
 }
 #pic3388 {
     grid-column:3;
 }
-#aR2 {
-    color: white; 
-    grid-column: 1/3; 
+#aR2 { 
     background-attachment: fixed; 
     background-image: url('../static/images/Scouting.jpg'); 
-    background-repeat: no-repeat; 
     background-position: center center; 
-    background-size: cover;  
-    grid-template-columns: 1fr 2fr 2fr 2fr 1fr; 
+    background-repeat: no-repeat; 
+    background-size: cover;
+    color: white; 
     display: grid; 
+    grid-column: 1/3;  
+    grid-template-columns: 1fr 2fr 2fr 2fr 1fr; 
     grid-template-rows: 1fr 1fr 1fr 1fr;
 }
-#aR2C1 {
-    padding-left: 1.5vw; 
+#aR2C1 { 
+    background: linear-gradient(to right, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)); 
+    border-radius: 3.8vmin; 
     grid-column: 2/4; 
     grid-row: 2; 
-    border-radius: 3.8vmin; 
-    background: linear-gradient(to right, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)); 
     margin-bottom: 1vmin;
+    padding-left: 1.5vw;
 }
-#aR2C1 > h3 {
-    text-align: left; 
+#aR2C1 > h3 { 
     font-size: 4vmin; 
     margin: 0 auto; 
     padding-top: 2.5vmin;
+    text-align: left;
 }
-#aR2C1 > p {
-    text-align: left; 
+#aR2C1 > p { 
     font-size: 2vmin; 
     margin:0 auto;
+    text-align: left;
 }
 #aR2C2 {
-    padding-left: 5vw; 
+    background: linear-gradient(to left, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)); 
+    border-radius: 3.8vmin; 
     grid-column: 3/5; 
     grid-row: 3/5; 
-    border-radius: 3.8vmin;
-    background: linear-gradient(to left, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)); 
-    margin-top: 4vmin; 
-    margin-bottom: 9vmin;
+    margin-bottom: 9vmin; 
+    margin-top: 4vmin;
+    padding-left: 5vw;
 }
-#aR2C2 > h3 {
-    text-align: left; 
+#aR2C2 > h3 { 
     font-size: 4vmin; 
     margin: 0 auto; 
     padding-top: 2vmin;
+    text-align: left;
 }
-#aR2C2 > p {
-    text-align: left; 
+#aR2C2 > p { 
     font-size: 2vmin;
     margin:0 auto;
+    text-align: left;
 }
-#aR3 {
+#aR3 {  
+    color:rgb(35, 39, 42); 
+    display: grid; 
+    font-size: 1.7vmin;
     grid-column: 1/3; 
     grid-row: 4; 
-    display: grid; 
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr; 
-    grid-template-rows: 150px 100px 3fr 100px;  
-    color:rgb(35, 39, 42); 
-    font-size: 1.7vmin;
+    grid-template-rows: 150px 100px 3fr 100px;
 }
-#aR3C1{
+#aR3C1{ 
+    display:grid;
     grid-column: 2/5; grid-row: 3; 
-    display:grid; 
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr; 
-    grid-template-columns: 2fr 1fr 2fr;
+    grid-template-columns: 2fr 1fr 2fr; 
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
 }
 #valuesH1{
     border-bottom: 4px solid rgb(15, 136, 240);
@@ -435,54 +440,54 @@ body{
 
 
 /* CONTACT */
-#backgroundpic3 {
+#backgroundpic3 { 
+    background-attachment: fixed; 
+    background-image: url('../static/images/arm gear.png'); 
+    background-position: center center; 
+    background-repeat: no-repeat; 
+    background-size: cover; 
+    display: grid;
     grid-column: 1/3; 
     grid-row: 1; 
-    z-index: 0; 
-    display: grid; 
     grid-template-columns: 1fr 1fr; 
     grid-template-rows: 2fr; 
-    background-image: url('../static/images/arm gear.png'); 
-    background-repeat: no-repeat; 
-    background-position: center center; 
-    background-attachment: fixed; 
-    background-size: cover;
+    z-index: 0;
 }
 .contact_mobile{
     grid-template-rows: 1fr 1.6fr !important;
 }
 #contact_container{
+    background-color: rgba(85, 85, 85, 0.322);
+    color:white;
     grid-column: 1;
     grid-row: 1;
-    color:white;
-    background-color: rgba(85, 85, 85, 0.322);
 }
 #contact_container2{
+    background-color: rgba(85, 85, 85, 0.322);
+    color:white;
     grid-column: 2;
     grid-row: 1;
-    color:white;
-    background-color: rgba(85, 85, 85, 0.322);
 }
-#contact > h1{
+#contact > h1{ 
+    font-size: 10vmin;
     padding-left: 10%; 
     padding-top: 140px; 
-    font-size: 10vmin; 
-    text-shadow: 3px 3px 2px#3f3f3fa6; 
-    text-align: left;
+    text-align: left; 
+    text-shadow: 3px 3px 2px#3f3f3fa6;
 }
-#cR1{
+#cR1{ 
+    display: grid;
     grid-column: 1/3; 
     grid-row: 2; 
-    grid-template-columns: 1fr 2fr 1fr; 
-    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
 }
-#cR1 > iframe{
-    padding-top: 9vmin; 
+#cR1 > iframe{ 
     grid-column: 2; 
-    min-height: 800px; 
-    min-width: 100%; 
     height: auto; 
-    margin: 0 auto;
+    margin: 0 auto; 
+    min-height: 800px; 
+    min-width: 100%;
+    padding-top: 9vmin;
 }
 
 
