--- a/static/portable.css
+++ b/static/portable.css
@@ -146,86 +146,106 @@ body{
     grid-row: 2;
     grid-template-columns: 2fr 1fr 2fr;
 }
-#backgroundpic{
-    grid-column: 1/3; 
-    grid-row: 1; 
-    z-index: 0; 
+.mobilehome{
+    grid-template-rows: 65vmin 1.8fr .5fr 2fr !important;  
+}
+#backgroundpic{ 
+    background-attachment: fixed; 
+    background-image: url('../static/images/field.PNG'); 
+    background-position: center center; 
+    background-repeat: no-repeat; 
+    background-size: cover; 
     display: grid;
+    grid-column: 1/3; 
+    grid-row: 1;
     grid-template-columns: 1fr 1fr; 
     grid-template-rows: 2fr; 
-    background-image: url('../static/images/field.PNG'); 
-    background-repeat: no-repeat; 
-    background-position: center center; 
-    background-attachment: fixed; 
-    background-size: cover;
+    z-index: 0;
 }
 #competitive{
     position: relative;
 }
-#competitive > h2{
+#competitive > h2{ 
+    font-size: 4.5vmin;
     padding-left: 10%;
     padding-top: 130px; 
-    font-size: 4.5vmin; 
-    text-shadow: 5px 5px 2px#3f3f3fa6; 
-    text-align: left;
+    text-align: left; 
+    text-shadow: 5px 5px 2px#3f3f3fa6;
 }
 #awards{
+    background-color: rgba(85, 85, 85, 0.322);
     grid-column: 2; 
     grid-row: 1;
-    background-color: rgba(85, 85, 85, 0.322);
 }
-#awards > h2{
+#awards > h2{ 
+    color:white; 
+    font-size: 3.7vmin;
     padding-right: 10%; 
     padding-top: 130px; 
-    font-size: 3.7vmin; 
-    text-shadow: 5px 5px 2px#3f3f3fa6; 
     text-align: right; 
-    color:white;
+    text-shadow: 5px 5px 2px#3f3f3fa6;
 }
 #hR1{
+    display: grid;
     grid-column: 1/3; 
     grid-row: 2; 
     grid-template-columns: 1fr 1fr; 
     grid-template-rows: 1fr 1fr;
-    display: grid;
 }
 #hR1C1{
+    display: grid;
     grid-column: 1/3; 
-    grid-row: 1;
-    display: grid; 
+    grid-row: 1; 
     grid-template-columns: 1fr 5fr 1fr; 
     grid-template-rows: 1fr 1fr; 
+    margin-top: 10vmin;
 }
 #hR1C1 > h3{
-    font-size: 6vmin;
+    font-size: 8vmin;
 }
 #hR1C1 > form{
     margin-top: 19vmin !important;
 }
 #hR1C1 > form > button{
+    font-size: 3.5vmin !important;
     height: 19vmin !important; 
     width: 40vmin !important;
-    font-size: 3.5vmin !important;
 }
 #hR1C2{
     grid-column: 1/3;
     grid-row: 2;
-    padding-top: 10vmin;
+    padding-bottom: 10vmin;
 }
 #hR1C2 > h3{
-    font-size: 6vmin;
+    font-size: 8vmin;
 }
 #hR1C2 > iframe{
     height: 26vh !important;
 }
 #hR2{
-    grid-column: 1/3; 
-    grid-row: 3;
     background-attachment: fixed; 
     background-image: url('../static/images/arena3.png'); 
-    background-repeat: no-repeat; 
     background-position: center center; 
+    background-repeat: no-repeat; 
     background-size: cover;
+    display: grid;
+    grid-column: 1/3; 
+    grid-row: 3;
+    grid-template-rows: 1fr 1fr 1fr;
+}
+#hR2 > h1{
+    color: rgb(255, 255, 255);
+    font-size: 14vmin;
+    letter-spacing: 1.1vmin;
+    margin: 0 auto;
+    text-shadow: -9px 4px 5px#3f3f3fa6; 
+}
+#hR2Desktop{
+    display: none;
+}
+#hR2Mobile{
+    display: block;
+    font-size: 15vmin !important;
 }
 #hR3{
     grid-column: 1/3; 
@@ -286,14 +306,14 @@ body{
 }
 .container {
     background-color: #fff;
-    box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.06), 0 1px 0 0 rgba(0, 0, 0, 0.02);
+    box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.06), 0 1px 0 0 rgba(0, 0, 0, 0.02); 
+    grid-column: 1/4;
+    grid-row: 1/3;
     margin: 0 auto;
     max-height: 250px;
     max-width: 100%;
     overflow: hidden;
     padding: 0;
-    grid-row: 1/3; 
-    grid-column: 1/4;
 }
 .particle {
     height:auto !important;
@@ -301,145 +321,145 @@ body{
 }
 #about {
     display: inline; 
-    text-align: center; 
     font-size: 10vmin; 
-    margin: 0 auto;
+    margin: 0 auto; 
+    text-align: center;
 }
-#backgroundpic2 {
+#backgroundpic2 { 
+    background-attachment: scroll; 
+    background-image: url('../static/images/with 221w.jpg'); 
+    background-position: top center; 
+    background-repeat: no-repeat; 
+    background-size: cover; 
+    border-bottom: 2px solid rgb(35, 39, 42); 
+    border-top: 2px solid rgb(35, 39, 42); 
+    display: grid;
     grid-column: 1/3; 
     grid-row: 1; 
-    z-index: 0; 
-    display: grid; 
     grid-template-columns: 1fr 1fr; 
     grid-template-rows: 2fr; 
-    background-image: url('../static/images/with 221w.jpg'); 
-    background-repeat: no-repeat; 
-    background-position: top center; 
-    background-attachment: scroll; 
-    background-size: cover; 
-    border-top: 2px solid rgb(35, 39, 42); 
-    border-bottom: 2px solid rgb(35, 39, 42);
+    z-index: 0;
 }
-#team2405 {
-    position: relative;
+#team2405 { 
+    background-color: rgba(85, 85, 85, 0.322); 
+    color:white;
     grid-column: 1; 
-    grid-row: 1; 
-    color:white; 
-    background-color: rgba(85, 85, 85, 0.322);
+    grid-row: 1;
+    position: relative;
 }
-#team2405 > h2{
+#team2405 > h2{ 
+    font-size: 3.5vmin;
     padding-left: 20%; 
     padding-top: 200px; 
-    font-size: 3.5vmin; 
-    text-shadow: 5px 5px 2px#3f3f3fa6; 
-    text-align: left;
+    text-align: left; 
+    text-shadow: 5px 5px 2px#3f3f3fa6;
 }
 #team221 {
-    position: relative;
+    background-color: rgba(85, 85, 85, 0.322);
     grid-column: 2; 
     grid-row: 1;
-    background-color: rgba(85, 85, 85, 0.322);
+    position: relative;
 }
-#team221 > h2 {
+#team221 > h2 { 
+    color:white; 
+    font-size: 3.5vmin;
     padding-right: 20%; 
     padding-top: 200px; 
-    font-size: 3.5vmin; 
-    text-shadow: 5px 5px 2px#3f3f3fa6; 
     text-align: right; 
-    color:white;
+    text-shadow: 5px 5px 2px#3f3f3fa6;
 }
-#aR1 {
+#aR1 { 
+    display: grid;
     grid-column: 1/3; 
     grid-row: 2; 
     grid-template-columns: 1fr 5fr 1fr; 
-    display: grid; 
     grid-template-rows: 1fr 1fr;
 }
-#aR1C1 {
+#aR1C1 { 
+    display: grid;
     grid-column: 2/3; 
     grid-row: 1/3; 
-    display: grid; 
     grid-template-columns: 3fr;
     grid-template-rows: 3fr 2fr;
 }
-#aR1C1 > p {
+#aR1C1 > p { 
+    color: rgb(35, 39, 42); 
+    font-size: 2.1vh;
     grid-column:1; 
     grid-row: 1;
     padding-top: 8vh; 
     text-align: left; 
-    color: rgb(35, 39, 42); 
-    font-size: 2.1vh; 
     text-indent: 2em;
 }
 #pic3388 {
     grid-row:2;
 }
-#aR2 {
-    color: white; 
-    grid-column: 1/3; 
+#aR2 { 
     background-attachment: fixed; 
     background-image: url('../static/images/Scouting.jpg'); 
-    background-repeat: no-repeat; 
     background-position: center center; 
-    background-size: cover;  
-    grid-template-columns: 1fr 2fr 2fr 2fr 1fr; 
+    background-repeat: no-repeat; 
+    background-size: cover;
+    color: white; 
     display: grid; 
+    grid-column: 1/3;  
+    grid-template-columns: 1fr 2fr 2fr 2fr 1fr; 
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
 }
-#aR2C1 {
-    padding-left: 1.5vw; 
+#aR2C1 { 
+    background: linear-gradient(to right, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)); 
+    border-radius: 3.8vmin; 
     grid-column: 2/5; 
     grid-row: 2; 
-    border-radius: 3.8vmin; 
-    background: linear-gradient(to right, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)); 
     margin-bottom: 1vmin;
     padding-bottom: 2vmin;
+    padding-left: 1.5vw;
 }
-#aR2C1 > h3 {
-    text-align: left; 
+#aR2C1 > h3 { 
     font-size: 6vmin; 
     margin: 0 auto; 
     padding-top: 3vmin;
+    text-align: left;
 }
-#aR2C1 > p {
-    text-align: left; 
+#aR2C1 > p { 
     font-size: 4vmin; 
     margin:0 auto;
+    text-align: left;
 }
 #aR2C2 {
-    padding-left: 5vw; 
+    background: linear-gradient(to left, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)); 
+    border-radius: 3.8vmin; 
     grid-column: 2/5; 
     grid-row: 4/6; 
-    border-radius: 3.8vmin;
-    background: linear-gradient(to left, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)); 
-    margin-top: 4vmin; 
-    margin-bottom: 11vmin;
+    margin-bottom: 11vmin; 
+    margin-top: 4vmin;
+    padding-left: 5vw;
 }
-#aR2C2 > h3 {
-    text-align: left; 
+#aR2C2 > h3 { 
     font-size: 6vmin; 
     margin: 0 auto; 
     padding-top: 3vmin;
+    text-align: left;
 }
-#aR2C2 > p {
-    text-align: left; 
+#aR2C2 > p { 
     font-size: 4vmin;
     margin:0 auto;
+    text-align: left;
 }
-#aR3 {
+#aR3 {  
+    color:rgb(35, 39, 42); 
+    display: grid; 
+    font-size: 3vmin;
     grid-column: 1/3; 
     grid-row: 4; 
-    display: grid; 
     grid-template-columns: 1fr 4fr 1fr 4fr 1fr; 
-    grid-template-rows: 100px 100px 3fr 100px;  
-    color:rgb(35, 39, 42); 
-    font-size: 3vmin;
+    grid-template-rows: 100px 100px 3fr 100px;
 }
-#aR3C1{
+#aR3C1{ 
+    display:grid;
     grid-column: 2/5; grid-row: 3; 
-    display:grid; 
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr; 
-    grid-template-columns: 2fr 1fr 2fr;
+    grid-template-columns: 2fr 1fr 2fr; 
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
 }
 #valuesH1{
     border-bottom: 4px solid rgb(15, 136, 240);
@@ -450,54 +470,54 @@ body{
 
 
 /* CONTACT */
-#backgroundpic3 {
+#backgroundpic3 { 
+    background-attachment: fixed; 
+    background-image: url('../static/images/arm gear.png'); 
+    background-position: center center; 
+    background-repeat: no-repeat; 
+    background-size: cover; 
+    display: grid;
     grid-column: 1/3; 
     grid-row: 1; 
-    z-index: 0; 
-    display: grid; 
     grid-template-columns: 1fr 1fr; 
     grid-template-rows: 2fr; 
-    background-image: url('../static/images/arm gear.png'); 
-    background-repeat: no-repeat; 
-    background-position: center center; 
-    background-attachment: fixed; 
-    background-size: cover;
+    z-index: 0;
 }
 .contact_mobile{
     grid-template-rows: .4fr 1.6fr !important;
 }
 #contact_container{
+    background-color: rgba(85, 85, 85, 0.322);
+    color:white;
     grid-column: 1/3;
     grid-row: 1;
-    color:white;
-    background-color: rgba(85, 85, 85, 0.322);
 }
 #contact_container2{
+    background-color: rgba(85, 85, 85, 0);
+    color:white;
     grid-column: 2;
     grid-row: 1;
-    color:white;
-    background-color: rgba(85, 85, 85, 0);
 }
-#contact > h1{
-    padding-left: 10%; 
-    margin-top: 90px; 
+#contact > h1{ 
     font-size: 10vmin; 
-    text-shadow: 3px 3px 2px#3f3f3fa6; 
-    text-align: left;
+    margin-top: 90px;
+    padding-left: 10%; 
+    text-align: left; 
+    text-shadow: 3px 3px 2px#3f3f3fa6;
 }
-#cR1{
+#cR1{ 
+    display: grid;
     grid-column: 1/3; 
     grid-row: 2; 
-    grid-template-columns: 1fr 2fr 1fr; 
-    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
 }
-#cR1 > iframe{
-    padding-top: 9vmin; 
+#cR1 > iframe{ 
     grid-column: 1/3; 
-    min-height: 830px; 
-    min-width: 133%; 
     height: auto; 
-    margin: 0 auto;
+    margin: 0 auto; 
+    min-height: 830px; 
+    min-width: 133%;
+    padding-top: 9vmin;
 }
 
 
